--- a/search-result.html
+++ b/search-result.html
@@ -31,8 +31,11 @@
     <div class="search_body">
       <div class="container">
         <div class="main_wrapper">
-          <div class="left">
-            <ul class="check"></ul>
+          <div class="filter_area">
+            <div class="search">
+              <input type="text" placeholder="Search here" />
+            </div>
+            <div class="left"></div>
           </div>
           <div class="right">
             <div class="searchbody_wrapper"></div>
